agregue notificacion cuando te registras, y terminos y condiciones(vacio)

--- a/templates/client_main.html
+++ b/templates/client_main.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <div class="user-icon">
-          <a href="/user_info/{{ session['username'] }}"><ion-icon name="person-circle-outline"></ion-icon></a>
+          <a href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
       </div>
     </div>
 
