--- a/templates/client_main.html
+++ b/templates/client_main.html
@@ -1,65 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mar de Libros</title>
     <link rel="stylesheet" href="static/client.css" />
-  </head>
-  <body>
+</head>
+<body>
 
     <div class="top-navbar">
-      <div class="menu-icon" onclick="toggleSidebar()">
-          <ion-icon name="menu-outline"></ion-icon>
-      </div>
-      <div class="logo">
-          <a href="/main">MAR DE LIBROS</a>
-      </div>
-      <div class="search-bar">
-        <form method="GET" action="/main">
-            <input type="text" name="search" placeholder="Buscar libros..." required>
-            <button type="submit">
-              <ion-icon name="search-outline"></ion-icon>
-            </button>
-        </form>
-      </div>
-      <div class="user-icon">
-          <a href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
-      </div>
-    </div>
+        <div class="logo">
+            <a href="/main">MAR DE LIBROS</a>
+        </div>
+        <div class="search-bar">
+            <form method="GET" action="/main">
+                <input type="text" name="search" placeholder="Buscar libros..." required>
+                <button type="submit">
+                    <ion-icon name="search-outline"></ion-icon>
+                </button>
+            </form>
+        </div>
 
-  <div class="sidebar" id="sidebar">
-    <ul>
-        <li><a href="#">Libros Leídos</a></li>
-        <li><a href="#">Géneros</a></li>
-        <li><a href="#">Autores</a></li>
-        <li><a href="#">Reseñas</a></li>
-    </ul>
-  </div>
+        <div class="nav-options">
+            <a href="{{ url_for('client_profile') }}">Perfil</a>
+        </div>
+
+    </div>
 
     <div class="books-grid">
         {% for book in books %}
         <div class="book-card">
-          <a href="{{ url_for('loan_book', book_id=book.id) }}"><img src="{{ url_for('static', filename=book.cover_image) }}" alt="Portada del libro"></a>
-          <div class="book-info">
-            <h2>{{ book.title }}</h2>
-            <p><strong>{{ book.author }}</strong> </p>
-            <p><strong>{{ book.genre }}</strong> </p>
-          </div>
+            <a href="{{ url_for('loan_book', book_id=book.id) }}"><img src="{{ url_for('static', filename=book.cover_image) }}" alt="Portada del libro"></a>
+            <div class="book-info">
+                <h2>{{ book.title }}</h2>
+                <p><strong>{{ book.author }}</strong></p>
+                <p><strong>{{ book.genre }}</strong></p>
+            </div>
         </div>
         {% else %}
         <p>No hay libros disponibles.</p>
         {% endfor %}
     </div>
 
-    <script>
-      function toggleSidebar() {
-          var sidebar = document.getElementById("sidebar");
-          sidebar.classList.toggle("active");
-      }
-    </script>
-
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
