--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,7 @@
         </form>
       </div>
     </div>
+    <a href="{{ url_for('about_us') }}" class="about-button">Acerca de Nosotros</a>
 
     <script
       type="module"
