agregue icono (hay q cambiarlo xq ta feo)

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros</title>
     <link rel="stylesheet" href="static/about_us.css">
+    <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
     <div class="about-container">
