--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mar de libros Iniciar Sesión</title>
     <link rel="stylesheet" href="static/style.css" />
+    <link rel="icon" href="static/favicon.jpg" /> <!-- cambiar por uno sin fondo pq se ve feo -->
   </head>
   <body>
     <div class="wrapper">
