--- a/templates/view_users.html
+++ b/templates/view_users.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Estudiantes</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='view_users.css') }}" />
+    <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
 <div class="container">
