--- a/templates/admin_main.html
+++ b/templates/admin_main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador</title>
     <link rel="stylesheet" href="static/admin.css" />
+    <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
 <div class="container">
