--- a/templates/client_profile.html
+++ b/templates/client_profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil del Cliente</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='client.css') }}">
+    <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
     <div class="profile-header">
