--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mar de libros Registro</title>
     <link rel="stylesheet" href="static/style.css" />
+    <link rel="icon" href="static/favicon.jpg" />
   </head>
   <body>
     <div class="wrapper">
