--- a/templates/user_info.html
+++ b/templates/user_info.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ user.name }}</title>
     <link rel="stylesheet" href="static/client.css" />
+    <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
     <div class="container">
