arregle about y perfil

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -8,13 +8,20 @@
     <link rel="icon" href="static/favicon.jpg" />
 </head>
 <body>
-    <div class="about-container">
-        <h1>Acerca de Nosotros</h1>
-        <p>Bienvenido a nuestra biblioteca en línea. Nuestro objetivo es proporcionar acceso fácil a una variedad de libros para todos nuestros usuarios. Estamos comprometidos con la promoción de la lectura y el conocimiento.</p>
-        <p>Contamos con una amplia selección de libros en diferentes géneros para que siempre encuentres algo que te interese.</p>
-        <p>Si tienes alguna pregunta o sugerencia, no dudes en ponerte en contacto con nosotros. Puedes escribirnos a nuestro correo electrónico: <a href="mailto:soportemardelibros@gmail.com.com">soportemardelibros@gmail.com</p>
-        
-        <a href="{{ url_for('login') }}">Regresar</a>
+    <div class="heading">
+        <h1>Sobre Nosotros</h1>
+        <p>Bienvenido a nuestra biblioteca en línea.</p>
+    </div>
+    <div class="container">
+        <section class="about">
+            <div class="about-content">
+                <h2>Nuestro Objetivo</h2>
+                <p>Nuestro objetivo es proporcionar acceso fácil a una variedad de libros para todos nuestros usuarios. Estamos comprometidos con la promoción de la lectura y el conocimiento.
+                    Contamos con una amplia selección de libros en diferentes géneros para que siempre encuentres algo que te interese.
+                    Si tienes alguna pregunta o sugerencia, no dudes en ponerte en contacto con nosotros. Puedes escribirnos a nuestro correo electrónico: <a href="mailto:soportemardelibros@gmail.com.com">soportemardelibros@gmail.com</p>
+                <a href="{{ url_for('login') }}">Regresar</a>
+            </div>   
+        </section>
     </div>
 </body>
 </html>
