--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,13 @@
     <link rel="icon" href="static/favicon.jpg" />
   </head>
   <body>
+    <header>
+      <h2 class="logo">Mar de Libros</h2>
+      <nav class="navigation">
+        <a href="{{ url_for('about_us') }}">Sobre Nosotros</a>
+        <a href="#">Contacto</a>
+      </nav>
+    </header>
     <div class="wrapper">
       <div class="form-box register">
         <h2>Registarse</h2>
