--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -16,9 +16,10 @@
         <section class="about">
             <div class="about-content">
                 <h2>Nuestro Objetivo</h2>
-                <p>Nuestro objetivo es proporcionar acceso fácil a una variedad de libros para todos nuestros usuarios. Estamos comprometidos con la promoción de la lectura y el conocimiento.
-                    Contamos con una amplia selección de libros en diferentes géneros para que siempre encuentres algo que te interese.
-                    Si tienes alguna pregunta o sugerencia, no dudes en ponerte en contacto con nosotros. Puedes escribirnos a nuestro correo electrónico: <a href="mailto:soportemardelibros@gmail.com.com">soportemardelibros@gmail.com</p>
+                <p>somos un equipo de cuatro apasionados por la tecnologia y la educacion, nos reunimos con el objetivo de crear una biblioteca escolar virtual, 
+                    un espacio donde los estudiantes y profesores puedan acceder a un catologo completo de libros y conocer su disponibilidad en tiempo real.
+                    nuestra plataforma digital busca simplificar la experiencia de busqueda y prestamo de libros. Queremos que tanto alumnos como docentes 
+                </p>
                 <a href="{{ url_for('login') }}">Regresar</a>
             </div>   
         </section>
